issues with jump-top on home page

--- a/home.css
+++ b/home.css
@@ -8,7 +8,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-38%, -55%);
-  color:rgb(96, 63, 131);
+  color:var(--paragraph);
   font-size: 3.5vw;
   }
 
